--- a/css/styles.css
+++ b/css/styles.css
@@ -135,6 +135,7 @@ hr {
   padding: 10px 20px 10px 20px;
   text-decoration: none;
   display: inline-block;
+  margin-bottom: 50px;
 }
 
 .btn:hover {
